--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ apply plugin: 'kotlin-kapt'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.pepefutetask"
+        applicationId "com.marketlogic"
         minSdkVersion 15
         targetSdkVersion 28
         versionCode 1
